# FLeCS

./: .gitignore  .pre-commit-config.yaml  404.html  Benchmark.ipynb  LICENSE  README.md  environment.yml  environment_cpu.yml  environment_gpu.yml  environment_history.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  search.html  setup.cfg  setup.py  sitemap.xml
cell/: index.html
cell_population/: index.html
datasets/: INFO.md  README.md
docs/: cell.md  cell_population.md  grn.md  index.md  intervention.md  mutation.md  parameter.md  sets.md  structural_equation.md  trajectory.md  utils.md
figure2/: CellPaths.ipynb  Evaluation.ipynb  Genie3.ipynb  PantherDBanalysis.ipynb  Paul15Preprocessing.ipynb  Prettytable.ipynb  VelocityConfidenceEvaluation.ipynb  genie3_grn_script.py  genie3_script.py  scTour_inference.ipynb  torchCFM.ipynb  train_ensemble_gene.py  train_ensemble_gene_ko_cebpa.py  train_ensemble_gene_ko_cebpe.py  train_gene.py  train_gene_ko_cebpa.py  train_gene_ko_cebpe.py  train_gene_latent.py  train_gene_protein.py
figure4/: Genie3.ipynb  ReploglePreprocessing.ipynb  SubgraphDrawing.ipynb  genie3_grn_script.py  genie3_script.py  train_ensemble_replogle.py  train_ensemble_replogle_all_ko.py  train_replogle.py
figure5/: EvaluationSciplex3.ipynb  PantherDBanalysis.ipynb  ScGen.ipynb  SciplexPreprocessing.ipynb  sciplex_in_sample_indices.npy  sciplex_out_sample_indices.npy  train_dataset_pert_paths.npy  train_interventional_sciplex.py  train_sciplex.py  train_sciplex_flow_matching.py
flecs/: __init__.py  attribute.py  cell.py  cell_factory.py  cell_population.py  decay.py  edge_set.py  grn.py  initializers.py  intervention.py  mutation.py  node_set.py  parameter.py  production.py  sets.py  structural_equation.py  trainable.py  trajectory.py  utils.py
grn/: index.html
intervention/: index.html
mutation/: index.html
notebooks/: CellPaths.ipynb  Evaluation.ipynb  EvaluationInterventional.ipynb  (+12 more)
(+73 files in other folders)
